src/tests/cases/snapshots/excise__tests__cases__ui__files_with_size_zero-2.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/files_with_size_zero  ◆ COMPLETE                                                                                                                                   
 allocated #   reclaim #   apparent 0   3 entries                                                                                                                                             
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────┤│Select an entry for identity,     │
││                                                                                                    │                                                  ││bounds, state, and actions.       │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                               file1                                                │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                              0 (33%)                                               │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                             ╔ EXIT ════════════════════════════════════════════════════════╗                          ││                                  │
││                                                             ║                                                              ║                          ││                                  │
││                                                             ║                         Quit Excise?                         ║                          ││                                  │
││                                                             ║                  [y] quit    [Esc/q/n] back                  ║le3                       ││                                  │
││                                                             ║                                                              ║                          ││                                  │
│├─────────────────────────────────────────────────────────────║                                                              ║                          ││                                  │
││                                                             ║                                                              ║33%)                      ││                                  │
││                                                             ╚══════════════════════════════════════════════════════════════╝                          ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                               file2                                                │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                              0 (33%)                                               │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
││                                                                                                    │                                                  ││                                  │
└┴────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
