src/tests/cases/snapshots/excise__tests__cases__ui__filter_and_help_overlay_are_keyboard_complete-2.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/filter_and_help_overlay  ◆ COMPLETE                                      
 Space used ##.#K · Can reclaim ##.#K · Content size 12.0K · 2 items                                
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
▟▐ STORAGE MAP ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏███████████▟▐ HELP ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜███████████▕
▏███████████▏Navigate                                                                  ▕███████████▕
▏███████████▏  arrows                 move selection                                   ▕███████████▕
▏███████████▏  h/j/k/l                Vim movement                                     ▕███████████▕
▏███████████▏  Enter                  open / rescan                                    ▕███████████▕
▏███████████▏  Esc                    back / cancel                                    ▕███████████▕
▏███████████▏  +  -  0                zoom in / out / reset                            ▕███████████▕
▏███████████▏  /                      filter items                                     ▕███████████▕
▏███████████▏  e                      export report                                    ▕███████████▕
▏███████████▏  t                      change theme                                     ▕███████████▕
▏███████████▏                                                                          ▕███████████▕
▏███████████▏Delete safely                                                             ▕███████████▕
▔▔▔▔▔▔▔▔▔▔▔▔▏  Backspace              plan permanent deletion                          ▕▔▔▔▔▔▔▔▔▔▔▔▔
            ▏  q / Ctrl-c             quit / interruption options                      ▕            
▟▐ SELECTED ▏  summary items          cannot be deleted                                ▕▔▔▔▔▔▔▔▔▔▔▔▜
▏file2      ▏  new/changed items      skipped before deletion                          ▕           ▕
▏◆ COMPLETE ▏[Esc/?/q] close help                                                      ▕           ▕
▏Actions una▏                                                                          ▕           ▕
▏Can reclaim▏                                                                          ▕           ▕
▏Content siz▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔           ▕
▏Item check: Inode { device_id: ########, inode_number: ######## }                                 ▕
▏Scan result: included                                                                             ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  / filter  e export  t theme  Backspace delete  ? help         
Excise · REDUCED MOTION
