src/tests/cases/snapshots/excise__tests__cases__ui__filter_and_help_overlay_are_keyboard_complete.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/filter_and_help_overlay  ◆ COMPLETE                                      
 Space used ##.#K · Can reclaim ##.#K · Content size 12.0K · 2 items                                
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
▟▐ STORAGE MAP ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████file2███████████████████████████████████████████████▕
▏███████████████████████████████████████████8.0K · 100%████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▏██████████████████████████████████████████████████████████████████████████████████████████████████▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                                                                                                    
▟▐ SELECTED ITEM ▌▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏file2                                                                                             ▕
▏◆ COMPLETE · file                                                                                 ▕
▏Enter open · Backspace delete                                                                     ▕
▏Can reclaim #.#K · Space used #.#K                                                                ▕
▏Content size 8.0K · 0 items                                                                       ▕
▏Item check: Inode { device_id: ########, inode_number: ######## }                                 ▕
▏Scan result: included                                                                             ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  / filter  e export  t theme  Backspace delete  ? help         
Excise · REDUCED MOTION
