src/tests/cases/snapshots/excise__tests__cases__ui__medium_width-2.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/medium_width  ◆ COMPLETE         
 Used ##.#K · Can reclaim ##.#K · Content 20.0K · 3 items   
Excise · REDUCED MOTION · store #.#K/#.#G                   
▟ LIST ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏▌  file2                                8.0K   40.0%      ▕
▏   file3                                8.0K   40.0%      ▕
▏   file1                                4.0K   20.0%      ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏ ▟ QUIT ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜ ▕
▏ ▏                     Quit Excise?                     ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                       [y] Quit                       ▕ ▕
▏ ▏                [Esc/q/n] Keep working                ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▏                                                      ▕ ▕
▏ ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔ ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▏                                                          ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
                                                            
▟ SELECTED ITEM ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▜
▏file2                                                     ▕
▏◆ COMPLETE · file                                         ▕
▏Actions unavailable                                       ▕
▏Can reclaim #.#K · Space used #.#K                        ▕
▏Content size 8.0K · 0 items                               ▕
▏Item check: Inode { device_id: ########, inode_number: ##…▕
▏Scan result: included                                     ▕
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
 arrows/hjkl move  Enter open/rescan  / filter  ? help
